# Xray-directional-reconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cu  parser.cuh
direction/: CMakeLists.txt  main.cu
direction/include/: moire.cuh  pca.cuh  tvmin.h
direction/src/: moire.cu  pca.cu  tvmin.cpp
ir/: CMakeLists.txt  Geometry.h  Params.cu  Params.h  Pbar.h  Vec.h  Volume.h  mlem.cu  mlem.cuh  reconstruct.cu  reconstruct.cuh
ir/include/: Params.h
ir/src/: mlem.cu  reconstruct.cu
pca/: CMakeLists.txt  main.cu  pca.cu  pca.cuh
pca/include/: pca.cuh
pca/src/: pca.cu
python/: calc_angle_cfrp.py  circle.py  plt_loss.py  plt_vec.py  show_main_direction.py  show_sphere_anim.py
reconstruct/: CMakeLists.txt
reconstruct/include/: Geometry.h  Params.h  Pbar.h  Vec.h  Volume.h  fdk.cuh  fiber.cuh  ir.cuh  mlem.cuh  params.h  parser.h  poisson_cpu.h  progressbar.h  quadfilt.h  reconstruct.cuh  vec.h  volume.h
reconstruct/src/: fdk.cu  fiber.cu  ir.cu  mlem.cu  params.cu  poisson_cpu.cpp  quadfilt.cpp  reconstruct.cu
registration/: CMakeLists.txt  SVD.h  gfrp_at_iter15_ir2_500x500x500_rot.stl  gfrp_at_iter15_ir2_500x500x500_shift.stl  main.cpp
solver/: CMakeLists.txt  cg_example.cpp  spmm_csr_example.cpp  spmv_csr_example.cpp
solver/include/: operation.h  operation_blas.h  spMat.h  tvmin.h  tvmin_cuda.h
solver/src/: operation.cpp  operation_blas.cpp  tvmin.cpp  tvmin_cuda.cpp
utility/: CMakeLists.txt  sandbox.cu  settings.json
